# fastMp4Parser

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md
data/: sample-mp4-file_dash.mpd
data/segment/: _file1.m4s  _file2.m4s  _file3.m4s  _file4.m4s  _file5.m4s
lib/fastmp4parser/: CMakeLists.txt
lib/fastmp4parser/include/fastmp4parser/: parser.h  parser.hpp
lib/fastmp4parser/src/: box_util.cpp  box_util.hpp  io_util.cpp
lib/fastmp4parser/src/boxes/: box_audio_sample_entry.cpp  box_main.cpp  box_media.cpp  box_movie.cpp  box_sample_size.cpp  box_sample_table.cpp  box_time_to_sample.cpp  box_track.cpp  box_video_sample_entry.cpp  boxes.h  boxes.hpp
output/: fastmp4
src/: box_util.cpp  box_util.h  constants.h  io_util.h  main.cpp
src/boxes/: audio_sample_entry.h  box.h  box_sample_size.cpp  box_track.cpp  boxes.h  media_box.h  media_data_box.h  movie_box.h  sample_size_box.h  sample_table_box.h  time_to_sample_box.h  track_box.h  video_sample_entry.h
